--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -49,41 +49,41 @@
 	                    </div>
 	               </div>
 				   <%end%>
-	               <div class="row">
+	               <!-- <div class="row">
 				       <div class="col-sm-3">
 	                       <div class="form-group">
-	                           <%= f.label :school_year_start_date, "School Start Year", :class=>"control-label" %>
-							   <%unless f.object.school_year_start_date.blank? %>
-	                    	       <%=f.select(:school_year_start_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School Start Year", :selected=>f.object.school_year_start_date.year}, {:class => "form-control"} )%>
-							   <%else%>
-							       <%=f.select(:school_year_start_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School Start Year"}, {:class => "form-control"} )%>
-							   <%end%>	   
+	                           <%#= f.label :school_year_start_date, "School Start Year", :class=>"control-label" %>
+							   <%#=unless f.object.school_year_start_date.blank? %>
+	                    	       <%#=f.select(:school_year_start_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School Start Year", :selected=>f.object.school_year_start_date.year}, {:class => "form-control"} )%>
+							   <%#=else%>
+							       <%#=f.select(:school_year_start_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School Start Year"}, {:class => "form-control"} )%>
+							   <%#=end%>	   
 	                       </div>
 	                   </div>
 					   <div class="col-sm-3">
 	                       <div class="form-group">
-			     	           <%= f.label :school_year_end_date, "School End Year", :class=>"control-label" %>
-							   <%unless f.object.school_year_end_date.blank? %>
-			     		           <%=f.select(:school_year_end_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School End Year", :selected=>f.object.school_year_end_date.year}, {:class => "form-control"} )%>
-							   <%else%>
-							       <%=f.select(:school_year_end_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School End Year"}, {:class => "form-control"} )%>
-							   <%end%>	
+			     	           <%#= f.label :school_year_end_date, "School End Year", :class=>"control-label" %>
+							   <%#=unless f.object.school_year_end_date.blank? %>
+			     		           <%#=f.select(:school_year_end_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School End Year", :selected=>f.object.school_year_end_date.year}, {:class => "form-control"} )%>
+							   <%#=else%>
+							       <%#=f.select(:school_year_end_date, @dates.collect {|d| [d.to_s,d.to_s]}, {:prompt => "Select School End Year"}, {:class => "form-control"} )%>
+							   <%#=end%>	
 							   <div id="id_end_msg" style="display:none" class="error">End date should be greater than start date</div>   	                       </div>
 	                   </div>
-	              </div>
+	              </div> -->
 				  <%= hidden_field_tag 'selected_ids', @assigned_teachers.map{|c| c.id }  %>
 	  		        <div class="row">
 	                      <div class="col-sm-9">
 	                          <div class="form-group">
 	                              <%= label_tag "teachers", "Teachers", :class=>"control-label form-lable-multiselect" %>
-								  <div style="listbox-alig;" id="assigned_div">
+								  <div class="listbox-alig left-listbox" id="assigned_div">
 									  <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                              <div class="assign_arrows">
-	                                  <a href="#Remove" class="remove btn"> > </a><br />
-	                                  <a href="#Add" class="add btn"> < </a>
+	                                  <a href="#Remove" class="remove btn disable-remove"> > </a><br />
+	                                  <a href="#Add" class="add btn disable-add"> < </a>
 	                              </div>
-	                              <div style="listbox-alig;" id="all_div">
+	                              <div class="listbox-alig right-listbox" id="all_div">
 									  <%= select_tag "all_present_id", options_from_collection_for_select(@school_specific_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                          </div>
@@ -94,14 +94,14 @@
   	                      <div class="col-sm-9">
   	                          <div class="form-group">
 								  <%= label_tag "studnts", "Students", :class=>"control-label form-lable-multiselect" %>
-  	                              <div style="float:left;" id="student_assigned_div">
+  	                              <div class="listbox-alig left-stud-listbox" id="student_assigned_div">
   	                                  <%= select_tag "student_assigned_id", options_from_collection_for_select(@assigned_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
   	                              </div>
   	                              <div class="assign_arrows">
-  	                                  <a href="#Remove" class="remove_stud btn"> > </a><br />
-  	                                  <a href="#Add" class="add_stud btn"> < </a>
+  	                                  <a href="#Remove" class="remove_stud btn stud-disable-remove"> > </a><br />
+  	                                  <a href="#Add" class="add_stud btn stud-disable-add"> < </a>
   	                              </div>
-  	                              <div style="float:left;" id="all_student_div">
+  	                              <div class="listbox-alig right-stud-listbox" id="all_student_div">
   	                                  <%= select_tag "all_student_id", options_from_collection_for_select(@school_specific_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
   	                              </div>
   	                          </div>
