--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -15,15 +15,15 @@
             	</address>
             	<address>
 			    	<strong>Number Of School Admins:</strong>
-			    	<%= @classroom.school.users.school_admins.count %>
+					<%= @classroom.users.school_admins.count %>
             	</address>
             	<address>
 			    	<strong>Number Of Teachers:</strong>
-			    	<%= @classroom.school.users.teachers.count %>
+			    	<%= @classroom.users.teachers.count %>
             	</address>
             	<address>
 			    	<strong>Number Of Students:</strong>
-			    	<%= @classroom.school.users.students.count %>
+			    	<%= @classroom.users.students.count %>
             	</address>
             	<address>
 			    	<strong>School Start Year:</strong>
