--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
 	            	</address>
 					<address>
 				    	<strong>Student Reading Ability:</strong>
-				    	<%= @reading %>
+				    	<%= @reading.grade_short + " (" + @reading.grade_name + ") " %>
 	            	</address>
 				<%end%>
 			    <div data-no-turbolink>
