--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -88,8 +88,8 @@
 				<div class="row">
 	            	<div class="col-sm-6">
 	                	<div class="form-group">
-	                    	<%= f.label :grade, "Grade Level", :class=>"control-label add-student-label" %>
-		    			    <%= f.select :grade, options_for_select(@reading_grades.collect {|g| [ g.grade_name, g.id ] }, :selected=>f.object.grade), {:prompt=>"Select Grade Level", :class=>"form-control"} %>
+							<%= f.label :grade, "Grade Level", :class=>"control-label add-student-label" %>
+		    			    <%= f.select :grade, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.grade), {:prompt=>"Select Grade Level", :class=>"form-control"} %>
 	                    </div>
 	                </div>
 				</div>	
@@ -97,7 +97,7 @@
 	                <div class="col-sm-6">
 	                    <div class="form-group">
 	                    	<%= f.label :reading_ability, "Reading Ability", :class=>"control-label add-student-label" %>
-		    			    <%= f.select :reading_ability, options_for_select(@reading_grades.collect {|g| [ g.grade_name, g.id ] }, :selected=>f.object.reading_ability), {:prompt=>"Select Reading Ability", :class=>"form-control"}%>
+		    			    <%= f.select :reading_ability, options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.id ] }, :selected=>f.object.reading_ability), {:prompt=>"Select Reading Ability", :class=>"form-control"}%>
 	                    </div>
 	                </div>
 	            </div>
@@ -145,15 +145,15 @@
                     <div class="col-sm-9">
                         <div class="form-group margin-t-10">
 							<%= label_tag 'classrooms', "Classrooms", :class=>"control-label form-lable-multiselect"%>
-							<div class="listbox-alig" id="assigned_div">
+							<div class="listbox-alig left-listbox" id="assigned_div">
                                 <!-- <span>Assigned Classrooms: </span> -->
 								<%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_classrooms, "id", "name"), :class=>"classroom-info-hover", :size=>"8", :multiple=>"multiple" %>
                             </div>
                             <div class="assign_arrows">
-                                <a href="#Remove" class="remove btn"> > </a><br />
-                                <a href="#Add" class="add btn"> < </a>
+                                <a href="#Remove" class="remove btn disable-remove"> > </a><br />
+                                <a href="#Add" class="add btn disable-add"> < </a>
                             </div>
-							<div class="listbox-alig" id="all_div">
+							<div class="listbox-alig right-listbox" id="all_div">
                                 <!-- <span>All Classrooms: </span> -->
 								<%= select_tag "all_present_id", options_from_collection_for_select(@school_specific_classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
                             </div>
@@ -177,6 +177,8 @@ $('.add-parent').on('click','.remove_fields',function(){
 		$('.add_fields').addClass('show').removeClass('hide');
 	}
 });
+
+
 </script>		
 
 
