Reset password related tasks

--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-7">
+	<%if @a["a_type"].blank?%>
     <div class="signin-info">
         <div class="logopanel">
             <!-- <h1><span>[</span> Books That Grow <span>]</span></h1> -->
@@ -15,13 +16,14 @@
                 </ul>
          <div class="mb20"></div>
    </div>
+   <%end%>
 </div>
 <div class="col-md-5">
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation") do %>
-		<%= hidden_field_tag(:email_id, @email_id)%>
-		<%= hidden_field_tag(:username, @username)%>
-		<%= hidden_field_tag(:school_id, @school_id)%>
-		<%= hidden_field_tag(:app_type, @app_type)%>
+		<%= hidden_field_tag(:email_id, @email_id.blank? ? @a["email"] : @email_id)%>
+		<%= hidden_field_tag(:username, @a["username"])%>
+		<%= hidden_field_tag(:school_id, @a["school_id"])%>
+		<%= hidden_field_tag(:app_type, @a["a_type"])%>
         <h4 class="nomargin">Reset password</h4>
         <p class="mt5 mb20">Reset password to login and access your account.</p>
 		<%= label_tag 'password_label', "New Password", :class => "form-label"%>
