Reset password related tasks

--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -3,7 +3,7 @@ Welcome to Books That Grow
 Username: <%= @username %> 
 
 To reset password click on following link: 
-link: <%= @link %> 
+link: <a href = '<%= @link %>'>reset password</a> 
 
 To login to the site, just follow this link: <%= @url %> 
 
