--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -4,9 +4,15 @@
 	        <div class="panel-heading">
                 <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
-			<div id="id_create_license" class="alert_license_success hide">License Added.</div>	
-			<div id="id_update_license" class="alert_license_success hide">License Updated.</div>	
-			<div id="id_archive_license" class="alert_license_success hide">License Archived.</div>
+			<div id="id_create_license" class="alert_license_success hide">License Added.
+			    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+			</div>	
+			<div id="id_update_license" class="alert_license_success hide">License Updated.
+			    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+			</div>	
+			<div id="id_archive_license" class="alert_license_success hide">License Archived.
+			    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+			</div>
 	       
 	        	<%= form_for @license, :html=>{:class=>"form_validation"}, :remote=>true  do |f| %>
 				 <div class="panel-body">
