Reset password related tasks

--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -1,10 +1,10 @@
-Welcome to Books That Grow
+<h4>Welcome to Books That Grow</h4>
 
-Username: <%= @username %> 
+<h5>Username: <%= @username %></h5>
 
-To reset password click on following link: 
-link: <a href = '<%= @link %>'>reset password</a> 
+<p>To reset password click on following
+link: <a href = '<%= @link %>'>reset password</a> </p>
 
-To login to the site, just follow this link: <%= @url %> 
+<p>To login to the site, just follow this link: <%= @url %><p> 
 
-Thanks, Books That Grow Team!
+<p>Thanks, Books That Grow Team!</p>
