Search for classroom/license and all user search and undo operation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -117,3 +117,9 @@ label.error {display:block;}
 .quick-edit-error-msg{text-align: center;margin: 37px auto 0;position: absolute !important;left: 0;right: 0;z-index: 10;}
 .diasble-arrors{color:black;background:#a1a1a1 !important;cursor:default !important;}
 .enable-arrors{color:#428bca;background:#e0e0e0 ;cursor:pointer !important;}
+
+// All user search css
+.all-user-search {margin-bottom: 40px !important;}
+.all-search-width {width:350px;}
+
+.undo-alert{padding:8px;margin-bottom:20px;}
