--- a/app/views/schools/_license_list.html.erb
+++ b/app/views/schools/_license_list.html.erb
@@ -41,7 +41,7 @@
 		<%end%>
         <% end %>
 	    <div data-no-turbolink>
-		    <%= paginate @licenses %>
+		    <%#= paginate @licenses %>
 	    </div>
     </div>		  
 </div>
