--- a/app/views/licenses/destroy.js.erb
+++ b/app/views/licenses/destroy.js.erb
@@ -10,3 +10,4 @@ $('#id_archive_license').removeClass('hide').addClass('show');
 $('#id_update_license').removeClass('show').addClass('hide');
 $('#id_create_license').removeClass('show').addClass('hide');
 
+license_table_sortable();
