--- a/app/views/classrooms/import.html.erb
+++ b/app/views/classrooms/import.html.erb
@@ -34,7 +34,7 @@
 	         <div width="50%" align="right" style="border : 1px solid #CCCCCC; border-radius : 10px; float: right; padding: 30px;">
 	         	<p>Let me Correct all the data and upload the List again </p>
 	         	<div style="text-align: center;">
-	         		<%= link_to "Upload Again", :action => :import_list, :classrooms => @classrooms, :method => 'post' %>
+	         		<%= link_to "Upload Again", {:action => :import_list, :school_id => @school_id} %>
 	         	</div>	
 	         </div>
 	     </div>
