--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -4,11 +4,8 @@
 </div>
 <div class="panel panel-default">
 	<div class="panel-body"> 
-		<%= text_field_tag :text_field_search, '', :placeholder=>'Search text' %>
-		<button class="btn btn-primary btn-xs" id="school_search" >
-						    Search
-	    </button>
-
+		<%= text_field_tag :text_field_search, '', :placeholder=>'Search text', :class=>"search-box" %>
+		<i class="glyphicon glyphicon-search btn btn-primary btn-xs search-icon-align" id="school_search" title="Search School" >	</i>
 		<%= form_tag 'schools/delete_school' do %>
 		<div class="index_page_btns" data-no-turbolink>
             <% if can? :create, :schools %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
