--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,5 +124,5 @@ label.error {display:block;}
 
 .undo-alert{padding:8px;margin-bottom:20px;}
 .all-user-search-btn-margin{margin-top:30px;}
-.search-icon-align{vertical-align: top !important;}
+.search-icon-align{vertical-align: top !important; padding: 7px 10px !important;}
 .search-box{width: 150px;height: 30px;padding: 6px 12px;font-size: 14px;line-height: 1.428571429;color: #555;background-color: #fff;border: 1px solid #ccc;border-radius: 4px;}
