--- a/app/views/users/user_search.html.erb
+++ b/app/views/users/user_search.html.erb
@@ -35,6 +35,7 @@
 						<th>Email</th>
 						<th>School Name</th>
 						<th>Role</th>
+						<th>Actions</th>
 	                </tr>
 	            </thead>
 				<% unless @users.blank?%>
@@ -47,6 +48,13 @@
 							<td class=""><%= user.email %></td>
 							<td class=""><%= user.school.name unless user.school.blank? %></td>
 							<td class=""><%= user.role.name %></td>
+							<td class="">
+								<%unless user.school.blank?%>		
+    								<%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => user.role_id, :school_id=>user.school.id) %> 
+								<%else%>
+   							 		<%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => user.role_id) %>
+								<% end %>
+							</td>
 					    </tr>
 					<% end %>
 				</tbody>
